修改版本升级之后的错误